--- a/frontend/packages/react-app/src/styles/profile.scss
+++ b/frontend/packages/react-app/src/styles/profile.scss
@@ -30,6 +30,13 @@
         width: 100%;
         height: auto;
         z-index: 2;
+        position: absolute;
+      }
+
+      .layer3 {
+        width: 100%;
+        height: auto;
+        z-index: 2;
         position: relative;
       }
     
