--- a/frontend/packages/react-app/src/styles/cards.scss
+++ b/frontend/packages/react-app/src/styles/cards.scss
@@ -6,6 +6,27 @@
   box-sizing: border-box;
 }
 
+.traitdes{
+  padding: 1em;
+  margin-bottom: 5em;
+}
+
+.mint-button {
+  padding: 1em !important;
+  color: white;
+  background-color: #00000068;
+  width: 100%;
+  position: relative;
+  border-color: transparent;
+  font-size: 1.2em;
+}
+
+.mint-button:hover {
+  background: #fff;
+  cursor: pointer;
+  color: dimgrey;
+}
+
 .clear-fix:after {
   display: block;
   clear: both;
@@ -24,7 +45,7 @@ $color-box-2 : rgba(34, 65, 154, .8);
 $color-box-3 : #f07306;
 $color-box-4 : #e660e3;
 $color-box-5 : #f07306;
-$color-box-6 : #146e7a;
+$color-box-6 : #FF9400;
 $color-box-7 : #de8b3e;
 
 .card__collection {
@@ -34,6 +55,7 @@ $color-box-7 : #de8b3e;
     padding: 10px;
     font-family: 'Do Hyeon', sans-serif;
     overflow: hidden;
+    z-index: 8;
     
   .cards {
       width: 300px;
@@ -95,11 +117,11 @@ $color-box-7 : #de8b3e;
     &__rect-1 {
       background: $color-box-6;
       width: 100%;
-      height: 100px;
+      height: 15em;
 
       display: block;
       position: absolute;
-      top: 80%;
+      top: 50%;
       opacity: .9;
       left: -100%;
       z-index: 8;
