--- a/frontend/packages/react-app/src/styles/index.css
+++ b/frontend/packages/react-app/src/styles/index.css
@@ -3,6 +3,13 @@
 *, *:before, *:after {
   box-sizing: border-box;
 }
+.nexus {
+  color: #00adbe;
+}
+
+.center {
+  text-align: center;
+}
 
 body {
   font-family: 'Poppins', sans-serif !important;
@@ -15,7 +22,6 @@ body {
 .logo {
   height: 3em;
   display: flex;
-  margin: 2em 0 0em 0em ;
 }
 
 .wallet-button {
@@ -27,7 +33,6 @@ body {
   position: relative;
   border-color: transparent;
   font-size: 1.2em;
-  margin-top: 3em;
 }
 
 .wallet-button:hover {
@@ -43,15 +48,23 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	height: 60px;
+	height: 5em;
 	top: 0;
   background: #383F51;
+  z-index: 10;
+  
 }
 
 .subnav {
 	position: sticky;
 	bottom: 0;
-	top: 60px; 
+	top: 80px; 
+  background: linear-gradient(75deg, #00adbe, #ff9500d7);
+  background-size: 100% 200%;
+  animation: gradient 2s ease infinite;
+	border-bottom: 1px solid #222;
+  color: #fff;
+  z-index: 9;
 }
 
 .subnav_container {
@@ -62,7 +75,7 @@ body {
 }
 
 .subnav_title {
-  font-size: 1.25em;
+  font-size: 3em;
 }
 
 .subnav_list {
@@ -99,10 +112,6 @@ h1 {
   color: #fff;
 }
 
-.subnav {
-	background: #dddbf1;
-	border-bottom: 1px solid #222;
-}
 
 .container {
   align-items: baseline;
@@ -130,6 +139,7 @@ title {
 	padding: 90px 30px;
 	background-color: #FFCDD2;
 	text-align: center;
+  z-index: 8;
 }
 h2 {
   font-size: 3em;
