--- a/frontend/packages/react-app/src/styles/profile.scss
+++ b/frontend/packages/react-app/src/styles/profile.scss
@@ -1,6 +1,21 @@
+  .traitgrid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 0.5em;
+    text-align: left;
+  }
+
+  .trait{
+    color: #383F51;
+  }
+
+  .traitvalue {
+    color: #fff !important;
+  }
 
   .wrapper{
-    width: auto;
+    width: 90%;
+    text-align: center;
     height: auto;
     position: relative;
     overflow: hidden;
@@ -30,7 +45,7 @@
         width: 100%;
         height: auto;
         z-index: 2;
-        position: absolute;
+        position: relative;
       }
 
       .layer3 {
@@ -99,7 +114,7 @@
         right:0;
         top:0;
         border-radius: 50px;
-        height:100%;
+        height:95%;
         .icon{
           opacity: 0;
           right:15px;
@@ -109,6 +124,7 @@
           opacity: 1;
           transform: scale(1);
           transform: translateY(0);
+          font-size: 3em;
         }
       }
       .contents{
